implement creation of an user
