# src/modules/user/repositories/UsersDTO.ts
@@ -1,0 +1,7 @@
+export interface ICreateUserDTO {
+  name: string;
+  email: string;
+  password: string;
+  username: string;
+  driverLicense: string;
+}
